fix(master): fix overflow-x(mobile), mobile-menu

--- a/src/style/mobile.less
+++ b/src/style/mobile.less
@@ -1,7 +1,10 @@
 @import './palette.less';
 
 @media (max-width: 768px) {
-
+    html, body {
+        overflow-x: hidden;
+    }
+    
     .section__title > h1 {
         font-family: "Alata";
         font-size: 40px;
